tester/src/test/aya/failure/patterns/split-on-nondata.aya.txt
In file $FILE:2:3 ->

  1 | \def test (a : \Set) : \Set
  2 |  | x y => a
         ^-^
  
Error: Cannot split on a non-inductive type `\oo-Type` with a constructor pattern `x y`
Tycking interrupted due to errors.
What are you doing?
